# django-admin-custom-menu

./: CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  setup.cfg
admin_custom_menu/: __init__.py  app_settings.py  navigation.py
admin_custom_menu/templates/admin/: smart_menu.html
admin_custom_menu/templatetags/: custom_menu.py
admin_smart_menu/: app_settings.py  navigation.py
admin_smart_menu/templates/admin/: smart_menu.html
admin_smart_menu/templatetags/: suit_menu.py
