[metadata]
license_file = LICENSE
name = django-admin-custom-menu
version = attr: admin_custom_menu.__version__
author = Ramez Ashraf
author_email = ramezashraf@gmail.com
description = A way to organize admin site menu menu. Heavily inspired by django-suit menu.
long_description = file:README.rst
long_description_content_type=text/x-rst
url = https://github.com/RamezIssac/django-admin-custom-menu
project_urls =
    Source = https://github.com/RamezIssac/django-admin-custom-menu

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

python_requires = >=3.6
install_requires=
	django>=2.2.13

